game endpoint working fine
